<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:id="@+id/linear_layout_sing_in"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical"
			android:paddingHorizontal="@dimen/dp4"
			android:paddingVertical="@dimen/dp8">

		<EditText
				android:id="@+id/login_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/dp8"
				android:hint="@string/hint_login"
				android:paddingHorizontal="@dimen/dp8"
				android:singleLine="true"
				android:textSize="@dimen/sp25" />

		<EditText
				android:id="@+id/password_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/dp4"
				android:hint="@string/hint_password"
				android:inputType="numberPassword"
				android:paddingHorizontal="@dimen/dp8"
				android:singleLine="true"
				android:textSize="@dimen/sp25" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/sing_in_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/sing_in" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/registration_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/registration" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/forgot_password_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/forgot_password" />
	</LinearLayout>

	<LinearLayout
			android:id="@+id/linear_layout_sing_out"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="@dimen/dp8"
			android:visibility="gone"
			tools:visibility="visible">

		<TextView
				android:id="@+id/info_text_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="@dimen/sp30" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/delete_account_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/delete_account" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/update_account_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/update_account" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/exit_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/exit" />
	</LinearLayout>

	<ProgressBar
			android:id="@+id/fragment_login_progress_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:visibility="gone"
			tools:visibility="visible" />
</FrameLayout>