<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="@dimen/dp4">

		<EditText
				android:id="@+id/login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/dp8"
				android:hint="@string/hint_login"
				android:paddingHorizontal="@dimen/dp8"
				android:singleLine="true"
				android:textSize="@dimen/sp25" />

		<EditText
				android:id="@+id/password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/dp4"
				android:hint="@string/hint_password"
				android:inputType="numberPassword"
				android:paddingHorizontal="@dimen/dp8"
				android:singleLine="true"
				android:textSize="@dimen/sp25" />

		<EditText
				android:id="@+id/password2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/dp4"
				android:hint="@string/hint_password2"
				android:inputType="numberPassword"
				android:paddingHorizontal="@dimen/dp8"
				android:singleLine="true"
				android:textSize="@dimen/sp25" />

		<EditText
				android:id="@+id/email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/dp4"
				android:hint="@string/hint_email"
				android:inputType="textEmailAddress"
				android:paddingHorizontal="@dimen/dp8"
				android:singleLine="true"
				android:textSize="@dimen/sp25" />

		<com.google.android.material.button.MaterialButton
				android:id="@+id/btn_registration"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/dp4"
				android:text="@string/registration" />
	</LinearLayout>

	<ProgressBar
			android:id="@+id/registration_progress_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:visibility="gone" />
</FrameLayout>